# AI_Agent_Project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: cd.yml  ci.yml
app/: config.py  db.py  embeddings.py  ingest.py  llm.py  loop_factory.py  main.py  observability.py  retrieval.py  scheduler.py
app/core/: admission.py  graduation.py  prompts.py
app/graph/: edges.py  graph.py  nodes.py  state.py
app/repositories/: academic.py  contacts.py  rag.py  reminders.py
app/routers/: chat.py
app/services/: email.py  llm_service.py  rag_service.py  reminder_time.py  reranker.py
app/static/: chat.js  style.css
app/templates/: index.html  reminders.html
app/tools/: executor.py  schema.py
archive/: pyproject.old.toml
data_pipeline/: build_catalog.py  build_curriculum_by_year.py  build_graduation_by_year.py  crawl_gachon.py  parse_pdf.py
docs/: ADR.md  DB_SCHEMA.md  MAJOR_CODE.md  architecture.md  카테고리_확정.md
eval/: build_dashboard.py  diag_guardrail.py  run_tier1.py  run_tier2.py  scenarios.py
output/parsed/: 2026년 전공교육과정.elements.json  2026년 전공교육과정.md  2026년 전공교육과정.raw.json  _crawl_manifest.json  gachon_academic_docs.md  가천대 복학 안내.md  가천대 사회봉사 이수기준.md  가천대 사회봉사교과목 안내.md  가천대 수강신청 매뉴얼(웹).md  가천대 수강정정·수강대기제 안내.md  가천대 수강포기 안내.md  가천대 외국어졸업인증 기준점수.md  가천대 외국어졸업인증제 안내.md  가천대 졸업 안내.md  가천대 휴학 안내.md
output/structured/: contacts.json  course_catalog.json  curriculum_by_year.json  graduation_by_year.json  graduation_requirements.json
scripts/: json_to_markdown.py
tests/: test_admission.py  test_contacts.py  test_department_scope.py  test_graduation.py  test_link_hint.py  test_reminder_content.py  test_response_grounding.py  test_router_interactions.py
멘토링 결과/: 1차 멘토링 결과.md
